Phenix.iTOS
Copyright © 2007, 2023 Phenixヾ Studio

发布地址：https://github.com/phenixiii/Phenix.iTOS
技术交流群：206648373


20230504
提供Phenix.Core工程，精简版开发工具库


20230511
提供Phenix.Algorithm工程，实现“栈式库存挑货问题”（StackInventory.ChooseGoods）、“基础统计.堆积数值的众数”（ElementaryStatistics.AccumulatedMode）


20230907
基于赵宁等编著《集装箱码头数字化营运管理（第二版）》、范志强的《集装箱港口连续泊位分配与岸桥作业调度联合优化》书籍，整理BAP+QCAP+QCSP集成算法所需的资料准备、业务规则、岗位分工、信息生成等内容，编写《BAP+QCAP+QCSP.xmind》思维导图


20231023
升级Phenix.Algorithm工程，实现“装船前预翻箱问题”（BayInventory.PreShipmentBlockRelocation）——开发中


20231116
升级到.NET8