@@ -1,0 +1,11 @@
+﻿EvenlySplitArray
+均衡拆分数组
+将一个数值数组拆分为N个新数组，要使得分到新数组的数值的合计数，与新数组标定的可容纳极限值，差额在N个新数组之间尽可能接近一致。
+案例：
+在平车载上散货称重后运输到火车边沿通过平台倾倒式装车的场景下，需要按照不同火车车卡标重进行均衡分摊重量的问题。
+1，已知每个车次的实际载重，一个车次仅允许倾倒至一批相同标重的车卡上；
+2，将每个车次的实际载重，放入一组数值数组中，数量为车次数量；
+3，统计每一批车卡的标重总数，作为相应的新数组的可容纳极限值；
+4，代入EvenlySplitArray()函数，返回每一批车卡对应的车次清单；
+5，在每一批车卡里，将车次总重进行均摊处理，均摊到每个车卡上；
+6，如果各批车卡的标重总重差距较大，可对标重总重进行加权处理。
