@@ -3,19 +3,13 @@ Microsoft Visual Studio Solution File, Format Version 12.00
 # Visual Studio Version 17
 VisualStudioVersion = 17.5.33516.290
 MinimumVisualStudioVersion = 10.0.40219.1
-Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "Simulation", "Simulation\Simulation.csproj", "{98B54684-4200-4B59-B0DC-16BBE73DF3AB}"
-EndProject
-Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "TrafficControlService", "TrafficControlService\TrafficControlService.csproj", "{E21CFB53-56B8-44CD-8EEE-2FDFA5BAE75F}"
-EndProject
-Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "FineCollectionService", "FineCollectionService\FineCollectionService.csproj", "{AB261A2F-B055-451B-940D-1D2D00A868B7}"
-EndProject
-Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "VisualSimulation", "VisualSimulation\VisualSimulation.csproj", "{89E4394C-C312-4974-94BB-AE167BC0C0A5}"
-EndProject
-Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "VehicleRegistrationService", "VehicleRegistrationService\VehicleRegistrationService.csproj", "{BFB8F937-7BDF-453B-8E67-D1AC908833E6}"
-EndProject
 Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "Phenix.Core", "Phenix.Core\Phenix.Core.csproj", "{FAF2BDFA-445B-46F0-A0D3-62F06B99DB3E}"
 EndProject
 Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "Phenix.StorageAlgorithm", "Phenix.StorageAlgorithm\Phenix.StorageAlgorithm.csproj", "{0EF53BFE-A99F-4E2F-8B22-0FB2B767BD19}"
+EndProject
+Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Phenix.StorageAlgorithm.Test", "Phenix.StorageAlgorithm.Test", "{38F08200-D24F-40BE-8822-A54E1C719E59}"
+EndProject
+Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "Phenix.StorageAlgorithm.Test.EvenlySplitArray", "Phenix.StorageAlgorithm.Test\Phenix.StorageAlgorithm.Test.EvenlySplitArray\Phenix.StorageAlgorithm.Test.EvenlySplitArray.csproj", "{CDB88E17-A1DA-4CFD-9454-EA89E66CC50A}"
 EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
@@ -23,26 +17,6 @@ Global
 		Release|Any CPU = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(ProjectConfigurationPlatforms) = postSolution
-		{98B54684-4200-4B59-B0DC-16BBE73DF3AB}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
-		{98B54684-4200-4B59-B0DC-16BBE73DF3AB}.Debug|Any CPU.Build.0 = Debug|Any CPU
-		{98B54684-4200-4B59-B0DC-16BBE73DF3AB}.Release|Any CPU.ActiveCfg = Release|Any CPU
-		{98B54684-4200-4B59-B0DC-16BBE73DF3AB}.Release|Any CPU.Build.0 = Release|Any CPU
-		{E21CFB53-56B8-44CD-8EEE-2FDFA5BAE75F}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
-		{E21CFB53-56B8-44CD-8EEE-2FDFA5BAE75F}.Debug|Any CPU.Build.0 = Debug|Any CPU
-		{E21CFB53-56B8-44CD-8EEE-2FDFA5BAE75F}.Release|Any CPU.ActiveCfg = Release|Any CPU
-		{E21CFB53-56B8-44CD-8EEE-2FDFA5BAE75F}.Release|Any CPU.Build.0 = Release|Any CPU
-		{AB261A2F-B055-451B-940D-1D2D00A868B7}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
-		{AB261A2F-B055-451B-940D-1D2D00A868B7}.Debug|Any CPU.Build.0 = Debug|Any CPU
-		{AB261A2F-B055-451B-940D-1D2D00A868B7}.Release|Any CPU.ActiveCfg = Release|Any CPU
-		{AB261A2F-B055-451B-940D-1D2D00A868B7}.Release|Any CPU.Build.0 = Release|Any CPU
-		{89E4394C-C312-4974-94BB-AE167BC0C0A5}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
-		{89E4394C-C312-4974-94BB-AE167BC0C0A5}.Debug|Any CPU.Build.0 = Debug|Any CPU
-		{89E4394C-C312-4974-94BB-AE167BC0C0A5}.Release|Any CPU.ActiveCfg = Release|Any CPU
-		{89E4394C-C312-4974-94BB-AE167BC0C0A5}.Release|Any CPU.Build.0 = Release|Any CPU
-		{BFB8F937-7BDF-453B-8E67-D1AC908833E6}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
-		{BFB8F937-7BDF-453B-8E67-D1AC908833E6}.Debug|Any CPU.Build.0 = Debug|Any CPU
-		{BFB8F937-7BDF-453B-8E67-D1AC908833E6}.Release|Any CPU.ActiveCfg = Release|Any CPU
-		{BFB8F937-7BDF-453B-8E67-D1AC908833E6}.Release|Any CPU.Build.0 = Release|Any CPU
 		{FAF2BDFA-445B-46F0-A0D3-62F06B99DB3E}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
 		{FAF2BDFA-445B-46F0-A0D3-62F06B99DB3E}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{FAF2BDFA-445B-46F0-A0D3-62F06B99DB3E}.Release|Any CPU.ActiveCfg = Release|Any CPU
@@ -51,9 +25,16 @@ Global
 		{0EF53BFE-A99F-4E2F-8B22-0FB2B767BD19}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{0EF53BFE-A99F-4E2F-8B22-0FB2B767BD19}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{0EF53BFE-A99F-4E2F-8B22-0FB2B767BD19}.Release|Any CPU.Build.0 = Release|Any CPU
+		{CDB88E17-A1DA-4CFD-9454-EA89E66CC50A}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{CDB88E17-A1DA-4CFD-9454-EA89E66CC50A}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{CDB88E17-A1DA-4CFD-9454-EA89E66CC50A}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{CDB88E17-A1DA-4CFD-9454-EA89E66CC50A}.Release|Any CPU.Build.0 = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
+	EndGlobalSection
+	GlobalSection(NestedProjects) = preSolution
+		{CDB88E17-A1DA-4CFD-9454-EA89E66CC50A} = {38F08200-D24F-40BE-8822-A54E1C719E59}
 	EndGlobalSection
 	GlobalSection(ExtensibilityGlobals) = postSolution
 		SolutionGuid = {4763DB48-829B-4C1E-AE14-A39F4C62AC0E}
