@@ -23,3 +23,7 @@ Copyright © 2007, 2023 Phenixヾ Studio
 
 20231116
 升级到.NET8
+
+
+20240119
+升级Phenix.Algorithm工程，添加拆分数组目录，提供均衡拆分数组类EvenlySplitArray，将一个数值数组拆分为N个新数组，要使得分到新数组的数值的合计数，与新数组标定的可容纳极限值，差额在N个新数组之间尽可能接近一致。
